# DeepRL2048

./: .gitignore  README.md  checkpoint.pth  dqn_model.pth  main.py  pyproject.toml  requirements.txt  test_agent.py  train_dqn.py
agent/: dqn_agent.py  replay_buffer.py
game_env/: game_simulator.py  game_ui.py  parallel_env.py
models/: dueling_q_network.py  q_network.py
ui/: reward_dashboard.py
utils/: config.py  logger.py  reward_writer.py
